# specinit

./: .darglintrc  .gitignore  .importlinter  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CLAUDE.md  LICENSE  QUICKSTART.md  README.md  pyproject.toml  vulture_whitelist.py
.claude/agents/: chief-architect.md
.claude/shared/: common-constraints.md  documentation-rules.md
.github/workflows/: ci.yml
.hypothesis/constants/: 1a3320728276a34e  1e8f6299c39d1d64  388fc7d276c6a10a  3d2e66010130fc4d  4aac58f851708ac9  55230793f7d0219d  5d9f4539944abb92  67eba996bef5d488  6f8c9bce7c0604cf  6fe0248a53fb27e6  7eef772434bb92e2  b61ff3f3d12274e7  bc77f83892009f7d  c1f3dc2b6f24288a  c9288f5006ff5466  df94dd5fb6412641  e7bb6dd6404a53d1  ead72d8d97c186e2  f3b7faa6798d607f  f8345f2b29118789
docs/: CLAUDE.md  CONTRIBUTING.md
docs/agent-templates/: README.md  fastapi.md  python.md  react.md  typescript.md
docs/doc-templates/: README.md  contributing-template.md  readme-template.md
docs/script-templates/: README.md.j2  check.sh.j2  clean.sh.j2  format.sh.j2  lint.sh.j2  setup.sh.j2  test.sh.j2
docs/script-templates/lib/: common.sh.j2  detect.sh.j2
examples/: README.md  __init__.py  demo.py
frontend/: .dependency-cruiser.cjs  .eslintrc.cjs  .jscpd.json  index.html  knip.json  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/coverage/: coverage-final.json  index.html
frontend/coverage/components/: AestheticsSelector.tsx.html  CompletionScreen.tsx.html  FeatureList.tsx.html  PlatformSelector.tsx.html  TechStackSelector.tsx.html  UserStoryInput.tsx.html  index.html
frontend/coverage/contexts/: SuggestionContext.tsx.html  index.html
frontend/frontend/: package-lock.json  package.json
frontend/src/: App.tsx  types.ts
frontend/src/components/: AestheticsSelector.tsx  CompletionScreen.tsx  FeatureInput.tsx  FeatureList.tsx  FormNavigation.tsx  FormProgressIndicator.tsx  GenerationProgress.tsx  GitHubSetup.tsx  PlatformSelector.tsx  ProjectForm.tsx  SuggestionActions.tsx  SuggestionEmptyState.tsx  SuggestionErrorState.tsx  SuggestionList.tsx  SuggestionLoadingState.tsx  SuggestionPanel.tsx  TechStackSelector.tsx  UserStoryInput.tsx
frontend/src/components/__tests__/: AestheticsSelector.test.tsx  CompletionScreen.test.tsx  FeatureList.test.tsx  PlatformSelector.test.tsx  TechStackSelector.test.tsx  UserStoryInput.test.tsx
frontend/src/components/form-steps/: StepAesthetics.tsx  StepBasics.tsx  StepContext.tsx  StepFeatures.tsx  StepGitHub.tsx  StepTechStack.tsx  StepUserStory.tsx  index.ts
frontend/src/components/github/: ModeSelector.tsx  RepositoryConfig.tsx  TokenSetupPanel.tsx  YoloModeToggle.tsx  index.ts
frontend/src/components/tech-stack/: EmptyState.tsx  ErrorState.tsx  LoadingState.tsx  SuggestionButton.tsx  SuggestionList.tsx  SuggestionsPanel.tsx
frontend/src/components/tech-stack/__tests__/: EmptyState.test.tsx  ErrorState.test.tsx  LoadingState.test.tsx  SuggestionButton.test.tsx  SuggestionList.test.tsx  SuggestionsPanel.test.tsx
frontend/src/contexts/: SuggestionContext.tsx
frontend/src/contexts/__tests__/: SuggestionContext.cache.test.tsx  SuggestionContext.test.tsx
frontend/src/hooks/: useFeatureSuggestions.ts
frontend/src/hooks/__tests__/: useFeatureSuggestions.test.ts
frontend/src/schemas/: projectSchema.ts
frontend/src/test/: setup.ts  test-utils.tsx
plan/: git-credential-security-plan.md  specinit-spec.md
plan/github_issues/: README.md  generation-01-python-quality-template.md  generation-02-typescript-quality-template.md  generation-03-comprehensive-test-generation.md  generation-04-security-first-configs.md  generation-05-cicd-pipeline-templates.md  generation-06-documentation-templates.md  generation-07-git-workflow-enforcement.md  generation-08-architecture-enforcement-configs.md  generation-09-subagent-quality-profiles.md  generation-10-quality-dashboard-generation.md  internal-01-expand-python-quality-tools.md  internal-02-comprehensive-pre-commit-hooks.md  internal-03-advanced-testing-infrastructure.md  internal-04-documentation-standards.md  internal-05-ci-cd-expansion.md  internal-06-quality-metrics-dashboard.md  internal-07-strengthen-architecture-enforcement.md  meta-00-maximum-quality-engineering-roadmap.md
scripts/: README.md  check.sh  clean.sh  complexity.sh  format.sh  lint.sh  mutation-test.sh  setup.sh  test.sh
scripts/lib/: common.sh  detect.sh
src/specinit/: __init__.py  launcher.py
src/specinit/cli/: __init__.py  main.py
src/specinit/generator/: __init__.py  cost.py  file_writer.py  orchestrator.py  prompts.py  suggestion_prompts.py  templates.py
src/specinit/github/: __init__.py  service.py  workflow.py
src/specinit/server/: __init__.py  app.py
src/specinit/storage/: __init__.py  config.py  history.py
templates/agent-profiles/: README.md  quality-reviewer.md  security-auditor.md  test-generator.md
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_generation.py
tests/property/: README.md  test_cost_tracking.py
tests/unit/: __init__.py  test_cli.py  test_config.py  test_cost.py  test_file_writer.py  test_github.py  test_github_service.py  test_github_workflow.py  test_history.py  test_launcher.py  test_orchestrator.py  test_prompts.py  test_server.py  test_suggestion_prompts.py  test_templates.py
