[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "specinit"
version = "1.0.0"
description = "AI-powered project initialization tool that transforms ideas into working codebases"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "SpecInit Team" }
]
keywords = ["cli", "project-generator", "ai", "claude", "scaffolding"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "click>=8.1.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "anthropic>=0.18.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0",
    "keyring>=24.0.0",
    "websockets>=12.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
    "pre-commit>=3.6.0",
]

[project.scripts]
specinit = "specinit.cli.main:cli"

[project.urls]
Homepage = "https://github.com/specinit/specinit"
Documentation = "https://github.com/specinit/specinit#readme"
Repository = "https://github.com/specinit/specinit"
Issues = "https://github.com/specinit/specinit/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/specinit"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["specinit"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=src/specinit --cov-report=term-missing"

[tool.coverage.run]
source = ["src/specinit"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]
